--- a/lostAndFind-client/src/app/components/lostfound-item/lostfound-item.component.html
+++ b/lostAndFind-client/src/app/components/lostfound-item/lostfound-item.component.html
@@ -1,52 +1,121 @@
 <br>
-<br>
-<br>
-
-<div class="container mt-5 mb-5">
-    <div class="d-flex justify-content-center h-100">
-        <div class="card">
-            <div class="card-header">
-                <h3>{{'LOSTFOUNDITEM.HEADER' | translate}}</h3>
-            </div>
-
-
-
-            <div class="card-body">
-                <form (submit)="onPostSubmit()" [formGroup]="postForm">
-                    <div class="input-group form-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="fa fa-location-arrow"></i></span>
-                        </div>
-                        <input name="location" formControlName="location" type="text" class="form-control"
-                            placeholder="{{'LOSTFOUNDITEM.LOCATION' | translate}}">
-                    </div>
-
-                    <div class="input-group form-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="fa fa-comment"></i></span>
-                        </div>
-                        <textarea name="description" id="exampleFormControlTextarea1" rows="2" class="form-control"
-                            placeholder="{{'LOSTFOUNDITEM.DESCRIPTION' | translate}}"></textarea>
-                    </div>
-
-                     <!-- <div class="input-group form-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="fa fa-calendar"></i></span>
-                        </div>
-                        <input type="date" class="form-control"
-                            placeholder="{{'LOSTFOUNDITEM.LOSTFOUNDDATE' | translate}}"
-                         formControlName="Lost_Found_Date" bsDatepicker [bsConfig]="{ isAnimated: true , dateInputFormat: 'YYYY-MM-DD' }"> 
-                    </div>  -->
-
-                </form>
-            </div>
-
-            <!-- <div class="card-footer">
-                <div class="d-flex justify-content-center links">
-                    Do you want to Complain?<a [routerLink]="../complainComponent"></a>
+<div class="container register">
+    <div class="row">
+      <div class="col-md-3 register-left">
+        <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt="" />
+        <h3>Welcome</h3>
+        <p>You can upload lost or found item description..!</p>
+        <!-- <input type="submit" name="" value="Login" /><br /> -->
+      </div>
+      <div class="col-md-9 register-right">
+        <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
+          <li class="nav-item">
+            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+              aria-selected="true">Item Details</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
+              aria-selected="false">Complain</a>
+          </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+          <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+            <h3 class="register-heading">Enter Item Description Here</h3>
+            <div class="row register-form">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Location *" value="" />
                 </div>
-            </div>  -->
+                <div class="form-group">
+                  <input type="date" class="form-control" placeholder="Enter Lost/Found Date *" value="" />
+                </div>
+                <div class="form-group">
+                  <input type="password" class="form-control" placeholder="Password *" value="" />
+                </div>
+                <!-- <div class="form-group">
+                  <input type="password" class="form-control" placeholder="Confirm Password *" value="" />
+                </div> -->
+                <div class="form-group">
+                  <div class="maxl">
+                    <label class="radio inline">
+                      <input type="radio" name="gender" value="male" checked>
+                      <span> Lost </span>
+                    </label>
+                    <label class="radio inline">
+                      <input type="radio" name="gender" value="female">
+                      <span> Found </span>
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <input type="email" class="form-control" placeholder="Your Email *" value="" />
+                </div>
+                <!-- <div class="form-group">
+                  <input type="text" minlength="10" maxlength="10" name="txtEmpPhone" class="form-control"
+                    placeholder="Your Phone *" value="" />
+                </div> -->
+                <div class="form-group">
+                  <select class="form-control">
+                    <option class="hidden" selected disabled>Status</option>
+                    <option>Delivered</option>
+                    <option>Not Delivered</option>
+                    <option>received</option>
+                    <option>Not received</option>
+                  </select>
+                </div>
+                <!-- <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Enter Your Answer *" value="" />
+                </div> -->
+                <input type="submit" class="btnRegister" value="Send Post" />
+              </div>
+            </div>
+          </div>
+  
+          <div class="tab-pane fade show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+            <h3 class="register-heading">Enter related details here </h3>
+            <div class="row register-form">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="First Name *" value="" />
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Last Name *" value="" />
+                </div>
+                <div class="form-group">
+                  <input type="email" class="form-control" placeholder="Email *" value="" />
+                </div>
+                <div class="form-group">
+                  <input type="text" maxlength="10" minlength="10" class="form-control" placeholder="Phone *" value="" />
+                </div>
+  
+  
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <input type="password" class="form-control" placeholder="Password *" value="" />
+                </div>
+                <div class="form-group">
+                  <input type="password" class="form-control" placeholder="Confirm Password *" value="" />
+                </div>
+                <div class="form-group">
+                  <select class="form-control">
+                    <option class="hidden" selected disabled>Please select your Security Question</option>
+                    <option>What is your Birth date?</option>
+                    <option>What is Your old Phone Number</option>
+                    <option>What is your Pet Name?</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="`Answer *" value="" />
+                </div>
+                <input type="submit" class="btnRegister" value="Send Complain" />
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-</div> 
-
+  
+  </div>
