--- a/lostAndFind-client/src/app/components/lostfound-item/lostfound-item.component.scss
+++ b/lostAndFind-client/src/app/components/lostfound-item/lostfound-item.component.scss
@@ -1,104 +1,102 @@
-/* Made with love by Mutiullah Samim*/
-
-@import url('https://fonts.googleapis.com/css?family=Numans');
-
-html,body{
-background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
-background-size: cover;
-background-repeat: no-repeat;
-height: 100%;
-font-family: 'Numans', sans-serif;
+.register{
+  background: -webkit-linear-gradient(left, grey , #000000 );
+  margin-top: 3%;
+  padding: 3%;
 }
-
-.container{
-height: 100%;
-align-content: center;
-//width: 760px;
-background-color: blue($color: #000000);
+.register-left{
+  text-align: center;
+  color: #fff;
+  margin-top: 4%;
 }
-
-// .form_body{
-//   margin: 22px;
-//   ;
-// }
-
-.card{
-height: 470px;
-margin: 60px;
-margin-top: auto;
-margin-bottom: auto;
-width: 640px;
-background-color: rgba(0,0,0,0.5) !important;
+.register-left input{
+  border: none;
+  border-radius: 1.5rem;
+  padding: 2%;
+  width: 60%;
+  background: #f8f9fa;
+  font-weight: bold;
+  color: #383d41;
+  margin-top: 30%;
+  margin-bottom: 3%;
+  cursor: pointer;
 }
-
-.social_icon span{
-font-size: 60px;
-margin-left: 10px;
-color: #FFC312;
+.register-right{
+  background: #f8f9fa;
+  border-top-left-radius: 10% 50%;
+  border-bottom-left-radius: 10% 50%;
 }
-
-.social_icon span:hover{
-color: white;
-cursor: pointer;
+.register-left img{
+  margin-top: 15%;
+  margin-bottom: 5%;
+  width: 25%;
+  -webkit-animation: mover 2s infinite  alternate;
+  animation: mover 1s infinite  alternate;
 }
-
-.card-header h3{
-color: white;
-text-align: center;
+@-webkit-keyframes mover {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-20px); }
 }
-
-.social_icon{
-position: absolute;
-right: 20px;
-top: -45px;
+@keyframes mover {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-20px); }
 }
-
-.input-group-prepend span{
-width: 50px;
-background-color: #FFC312;
-color: black;
-border:0 !important;
+.register-left p{
+  font-weight: lighter;
+  padding: 12%;
+  margin-top: -9%;
 }
-
-input:focus{
-outline: 0 0 0 0  !important;
-box-shadow: 0 0 0 0 !important;
-
+.register .register-form{
+  padding: 10%;
+  margin-top: 10%;
 }
-
-.remember{
-color: white;
-}
-
-.remember input
-{
-width: 20px;
-height: 20px;
-margin-left: 15px;
-margin-right: 5px;
-}
-
-.login_btn{
-color: black;
-background-color: #FFC312;
-width: auto;
-}
-
-.cancel_btn{
+.btnRegister{
+  float: right;
+  margin-top: 10%;
+  border: none;
+  border-radius: 1.5rem;
+  padding: 2%;
+  background: yellow;
   color: black;
-  background-color: red;
-  width: auto;
+  font-weight: 600;
+  width: 50%;
+  cursor: pointer;
+}
+.register .nav-tabs{
+  margin-top: 3%;
+  border: none;
+  background: grey;
+  border-radius: 1.5rem;
+  width: 200px;
+  float: right;
+}
+.register .nav-tabs .nav-link{
+  padding: 2%;
+  height: 34px;
+  font-weight: 600;
+  color: #fff;
+  border-top-right-radius: 1.5rem;
+  border-bottom-right-radius: 1.5rem;
+}
+.register .nav-tabs .nav-link:hover{
+  border: none;
+}
+.register .nav-tabs .nav-link.active{
+  width: 100px;
+  color: black;
+  border: 2px solid grey;
+  border-top-left-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+}
+.register-heading{
+  text-align: center;
+  margin-top: 8%;
+  margin-bottom: -15%;
+  color: #495057;
 }
 
-.login_btn:hover{
-color: black;
-background-color: white;
-}
 
-.links{
-color: white;
+@media (min-width: 992px){
+.container, .container-sm, .container-md, .container-lg {
+  max-width: inherit;
 }
-
-.links a{
-margin-left: 4px;
 }
