--- a/lostAndFind-client/src/app/pages/admin-new/admin-new.component.html
+++ b/lostAndFind-client/src/app/pages/admin-new/admin-new.component.html
@@ -20,20 +20,43 @@
       <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
           <h3 class="register-heading">Add New Admin</h3>
+
+          <form (submit)="onRegisterSubmit()">
           <div class="row register-form">
+
             <div class="col-md-6">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="First Name *" value="" />
+
+              <div class="input-group form-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fa fa-id-card"></i></span>
+                </div>
+                <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
               </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Last Name *" value="" />
+
+              <div class="input-group form-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fa fa-user"></i></span>
+                </div>
+                <input name="fName" type="text" class="form-control"
+                  placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
               </div>
-              <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password *" value="" />
+
+              <div class="input-group form-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fa fa-user"></i></span>
+                </div>
+                <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
               </div>
+
               <div class="form-group">
-                <input type="password" class="form-control" placeholder="Confirm Password *" value="" />
+                <select class="form-control">
+                  <option class="hidden" selected disabled>Please select your Security Question</option>
+                  <option>What is your Birth date?</option>
+                  <option>What is Your old Phone Number</option>
+                  <option>What is your Pet Name?</option>
+                </select>
               </div>
+
               <div class="form-group">
                 <div class="maxl">
                   <label class="radio inline">
@@ -46,71 +69,134 @@
                   </label>
                 </div>
               </div>
-            </div>
+
+            </div> <!--end col-md-6-->
+
             <div class="col-md-6">
-              <div class="form-group">
-                <input type="email" class="form-control" placeholder="Your Email *" value="" />
+
+              <div class="input-group form-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fa fa-id-card"></i></span>
+                </div>
+                <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
               </div>
-              <div class="form-group">
-                <input type="text" minlength="10" maxlength="10" name="txtEmpPhone" class="form-control"
-                  placeholder="Your Phone *" value="" />
+
+              <div class="input-group form-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fa fa-envelope"></i></span>
+                </div>
+                <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
               </div>
-              <div class="form-group">
-                <select class="form-control">
-                  <option class="hidden" selected disabled>Please select your Security Question</option>
-                  <option>What is your Birth date?</option>
-                  <option>What is Your old Phone Number</option>
-                  <option>What is your Pet Name?</option>
-                </select>
+
+              <div class="input-group form-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fa fa-key"></i></span>
+                </div>
+                <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
               </div>
+
+
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Enter Your Answer *" value="" />
               </div>
               <input type="submit" class="btnRegister" value="Register" />
-            </div>
-          </div>
+
+            </div> <!--end col-md-6-->
+
+          </div> <!--end row register-form-->
+          </form> <!--end form-->
         </div>
 
         <div class="tab-pane fade show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
           <h3 class="register-heading">Add New Moderator</h3>
-          <div class="row register-form">
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="First Name *" value="" />
+          <form (submit)="onRegisterSubmit()">
+            <div class="row register-form">
+
+              <div class="col-md-6">
+
+                <div class="input-group form-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fa fa-id-card"></i></span>
+                  </div>
+                  <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
+                </div>
+
+                <div class="input-group form-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fa fa-user"></i></span>
+                  </div>
+                  <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
+                </div>
+
+                <div class="input-group form-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fa fa-user"></i></span>
+                  </div>
+                  <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
+                </div>
+
+                <div class="form-group">
+                  <select class="form-control">
+                    <option class="hidden" selected disabled>Please select your Security Question</option>
+                    <option>What is your Birth date?</option>
+                    <option>What is Your old Phone Number</option>
+                    <option>What is your Pet Name?</option>
+                  </select>
+                </div>
+
+                <div class="form-group">
+                  <div class="maxl">
+                    <label class="radio inline">
+                      <input type="radio" name="gender" value="male" checked>
+                      <span> Male </span>
+                    </label>
+                    <label class="radio inline">
+                      <input type="radio" name="gender" value="female">
+                      <span>Female </span>
+                    </label>
+                  </div>
+                </div>
+
               </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Last Name *" value="" />
-              </div>
-              <div class="form-group">
-                <input type="email" class="form-control" placeholder="Email *" value="" />
-              </div>
-              <div class="form-group">
-                <input type="text" maxlength="10" minlength="10" class="form-control" placeholder="Phone *" value="" />
-              </div>
+              <!--end col-md-6-->
+
+              <div class="col-md-6">
+
+                <div class="input-group form-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fa fa-id-card"></i></span>
+                  </div>
+                  <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
+                </div>
+
+                <div class="input-group form-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fa fa-envelope"></i></span>
+                  </div>
+                  <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
+                </div>
+
+                <div class="input-group form-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fa fa-key"></i></span>
+                  </div>
+                  <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
+                </div>
 
 
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Enter Your Answer *" value="" />
+                </div>
+                <input type="submit" class="btnRegister" value="Register" />
+
+              </div>
+              <!--end col-md-6-->
+
             </div>
-            <div class="col-md-6">
-              <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password *" value="" />
-              </div>
-              <div class="form-group">
-                <input type="password" class="form-control" placeholder="Confirm Password *" value="" />
-              </div>
-              <div class="form-group">
-                <select class="form-control">
-                  <option class="hidden" selected disabled>Please select your Security Question</option>
-                  <option>What is your Birth date?</option>
-                  <option>What is Your old Phone Number</option>
-                  <option>What is your Pet Name?</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="`Answer *" value="" />
-              </div>
-              <input type="submit" class="btnRegister" value="Register" />
-            </div>
-          </div>
+            <!--end row register-form-->
+          </form>
+          <!--end form-->
+
         </div>
       </div>
     </div>
