--- a/lostAndFind-client/src/app/pages/admin-new/admin-new.component.scss
+++ b/lostAndFind-client/src/app/pages/admin-new/admin-new.component.scss
@@ -100,3 +100,16 @@
     max-width: inherit;
   }
 }
+
+.input-group-prepend span{
+width: 50px;
+background-color: #FFC312;
+color: black;
+border:0 !important;
+}
+
+input:focus{
+outline: 0 0 0 0  !important;
+box-shadow: 0 0 0 0 !important;
+
+}
