--- a/lostAndFind-client/src/app/components/login/login.component.html
+++ b/lostAndFind-client/src/app/components/login/login.component.html
@@ -18,17 +18,27 @@
 
 			<div class="card-body">
         <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onLoginSubmit()" #f="ngForm" novalidate>
+
           <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" class="form-control" name="username" [(ngModel)]="form.username" required #username="ngModel" />
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text"><i class="fa fa-user"></i></span>
+              </div>
+              <input type="text" class="form-control" name="username" [(ngModel)]="form.username" required #username="ngModel" />
+            </div>
             <div class="alert alert-danger" role="alert" *ngIf="f.submitted && username.invalid">
               Username is required!
             </div>
           </div>
+
           <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" name="password" [(ngModel)]="form.password" required minlength="6"
-              #password="ngModel" />
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text"><i class="fa fa-envelope"></i></span>
+              </div>
+              <input type="password" class="form-control" name="password" [(ngModel)]="form.password" required minlength="6"
+                #password="ngModel" />
+            </div>
             <div class="alert alert-danger" role="alert" *ngIf="f.submitted && password.invalid">
               <div *ngIf="password.errors.required">Password is required</div>
               <div *ngIf="password.errors.minlength">
@@ -36,20 +46,25 @@
               </div>
             </div>
           </div>
-          <div class="form-group">
-            <button class="btn btn-primary btn-block">
-              Login
-            </button>
-          </div>
+
           <div class="form-group">
             <div class="alert alert-danger" role="alert" *ngIf="f.submitted && isLoginFailed">
               Login failed: {{ errorMessage }}
+
             </div>
           </div>
+
+          <div class="form-group">
+            <input type="button" (click)="bsModalRef.hide()" value="{{'REGISTER.CANCEL_BUTTON' | translate}}"
+              class="btn float-right cancel_btn">
+            <input type="submit" [disabled]="f.invalid" value="{{'REGISTER.SIGNUP_BUTTON' | translate}}"
+              class="btn float-right login_btn mr-2">
+          </div>
+
         </form>
 
-        <div class="alert alert-success" *ngIf="isLoggedIn">
-          Logged in as {{ roles }}.
+        <div *ngIf="isLoggedIn">
+          <ng-flash-message></ng-flash-message>
         </div>
 			</div>
 
