--- a/lostAndFind-client/src/app/pages/admin-new/admin-new.component.html
+++ b/lostAndFind-client/src/app/pages/admin-new/admin-new.component.html
@@ -48,14 +48,14 @@
                 <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
               </div>
 
-              <div class="form-group">
+              <!-- <div class="form-group">
                 <select class="form-control">
                   <option class="hidden" selected disabled>Please select your Security Question</option>
                   <option>What is your Birth date?</option>
                   <option>What is Your old Phone Number</option>
                   <option>What is your Pet Name?</option>
                 </select>
-              </div>
+              </div> -->
 
               <div class="form-group">
                 <div class="maxl">
@@ -96,9 +96,9 @@
               </div>
 
 
-              <div class="form-group">
+              <!-- <div class="form-group">
                 <input type="text" class="form-control" placeholder="Enter Your Answer *" value="" />
-              </div>
+              </div>-->
               <input type="submit" class="btnRegister" value="Register" />
 
             </div> <!--end col-md-6-->
@@ -135,14 +135,14 @@
                   <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
                 </div>
 
-                <div class="form-group">
+                <!-- <div class="form-group">
                   <select class="form-control">
                     <option class="hidden" selected disabled>Please select your Security Question</option>
                     <option>What is your Birth date?</option>
                     <option>What is Your old Phone Number</option>
                     <option>What is your Pet Name?</option>
                   </select>
-                </div>
+                </div> -->
 
                 <div class="form-group">
                   <div class="maxl">
@@ -184,9 +184,9 @@
                 </div>
 
 
-                <div class="form-group">
+                <!-- <div class="form-group">
                   <input type="text" class="form-control" placeholder="Enter Your Answer *" value="" />
-                </div>
+                </div> -->
                 <input type="submit" class="btnRegister" value="Register" />
 
               </div>
