--- a/lostAndFind-client/src/app/components/lostfound-item/lostfound-item.component.html
+++ b/lostAndFind-client/src/app/components/lostfound-item/lostfound-item.component.html
@@ -43,12 +43,12 @@
                 <div class="form-group">
                   <div class="maxl">
                     <label class="radio inline">
-                      <input type="radio" name="gender" value="lost" checked>
+                      <input type="radio" name="status" formControlName="status" value="lost" checked>
                       <span> Lost </span>
                     </label>
                     <label class="radio inline">
-                      <input type="radio" name="gender" value="found">
-                      <span> Found </span>
+                      <input type="radio" name="status" formControlName="status" value="found">
+                      <span> found </span>
                     </label>
                   </div>
                 </div>  
@@ -62,7 +62,7 @@
                       <input type="text" minlength="10" maxlength="10" name="txtEmpPhone" class="form-control"
                         placeholder="Your Phone *" value="" />
                     </div> -->
-                <div class="form-group">
+                <!-- <div class="form-group">
                   <select class="form-control" formControlName="status" [ngClass]="{ 'is-invalid': submitted && f.status.errors }">
                     <option class="hidden" selected disabled>Status</option>
                     <option>Delivered</option>
@@ -70,7 +70,7 @@
                     <option>received</option>
                     <option>Not received</option>
                   </select>
-                </div>
+                </div> -->
                 <!-- <div class="form-group">
                       <input type="text" class="form-control" placeholder="Enter Your Answer *" value="" />
                     </div> -->
