--- a/lostAndFind-client/src/app/components/login/login.component.html
+++ b/lostAndFind-client/src/app/components/login/login.component.html
@@ -1,22 +1,22 @@
 <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
-	<span aria-hidden="true">&times;</span>
+  <span aria-hidden="true">&times;</span>
 </button>
 
 <div class="container mt-5 mb-5">
-	<div class="d-flex justify-content-center h-100">
-		<div class="card">
-			<div class="card-header">
-				<h3>{{'LOGIN.HEADER' | translate}}</h3>
-				<div class="d-flex justify-content-end social_icon">
-					<span><i class="fa fa-facebook-square"></i></span>
-					<span><i class="fa fa-google-plus-square"></i></span>
-					<span><i class="fa fa-twitter-square"></i></span>
-				</div>
-			</div>
+  <div class="d-flex justify-content-center h-100">
+    <div class="card">
+      <div class="card-header">
+        <h3>{{'LOGIN.HEADER' | translate}}</h3>
+        <div class="d-flex justify-content-end social_icon">
+          <span><i class="fa fa-facebook-square"></i></span>
+          <span><i class="fa fa-google-plus-square"></i></span>
+          <span><i class="fa fa-twitter-square"></i></span>
+        </div>
+      </div>
 
-			<ng-flash-message></ng-flash-message>
+      <ng-flash-message></ng-flash-message>
 
-			<div class="card-body">
+      <div class="card-body">
         <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onLoginSubmit()" #f="ngForm" novalidate>
 
           <div class="form-group">
@@ -24,7 +24,8 @@
               <div class="input-group-prepend">
                 <span class="input-group-text"><i class="fa fa-user"></i></span>
               </div>
-              <input type="text" class="form-control" name="username" [(ngModel)]="form.username" required #username="ngModel" />
+              <input type="text" class="form-control" name="username" [(ngModel)]="form.username" required
+                #username="ngModel" placeholder="{{'LOGIN.PLACEHOLDER_USERNAME' | translate}}">
             </div>
             <div class="alert alert-danger" role="alert" *ngIf="f.submitted && username.invalid">
               Username is required!
@@ -36,8 +37,8 @@
               <div class="input-group-prepend">
                 <span class="input-group-text"><i class="fa fa-envelope"></i></span>
               </div>
-              <input type="password" class="form-control" name="password" [(ngModel)]="form.password" required minlength="6"
-                #password="ngModel" />
+              <input type="password" class="form-control" name="password" [(ngModel)]="form.password" required
+                minlength="6" #password="ngModel" placeholder="{{'LOGIN.PLACEHOLDER_PASSWORD' | translate}}">
             </div>
             <div class="alert alert-danger" role="alert" *ngIf="f.submitted && password.invalid">
               <div *ngIf="password.errors.required">Password is required</div>
@@ -66,16 +67,16 @@
         <div *ngIf="isLoggedIn">
           <ng-flash-message></ng-flash-message>
         </div>
-			</div>
+      </div>
 
-			<div class="card-footer">
-				<div class="d-flex justify-content-center links">
-					Don't have an account?<a href="#">Sign Up</a>
-				</div>
-				<div class="d-flex justify-content-center">
-					<a href="#">Forgot your password?</a>
-				</div>
-			</div>
-		</div>
-	</div>
+      <div class="card-footer">
+        <div class="d-flex justify-content-center links">
+          Don't have an account?<a href="#">Sign Up</a>
+        </div>
+        <div class="d-flex justify-content-center">
+          <a href="#">Forgot your password?</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
